--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
         <ul class="nav-links">
           <li><a href="#home-section">Home</a></li>
           <li><a href="#about-section">About Us</a></li>
+          <li><a href="#information-section">Programs</a></li>
           <li><a href="#faq-section">Faq's</a></li>
+          <li><a href="#footer">Contact</a></li>
         </ul>
       </nav>
       <div class="hidden">holis</div>
@@ -30,9 +32,11 @@
       <div id="mobile-menu" class="overlay">
         <a onclick="closeNav()" href="" class="close">&times;</a>
         <div class="overlay-content">
-          <a onclick="closeNav()" href="#">Home</a>
-          <a onclick="closeNav()" href="#">About</a>
+          <a onclick="closeNav()" href="#home-section">Home</a>
+          <a onclick="closeNav()" href="#about-section">About Us</a>
+          <a onclick="closeNav()" href="#information-section">Programs</a>
           <a onclick="closeNav()" href="#faq-section">Faq's</a>
+          <a onclick="closeNav()" href="#footer">Contact</a>
         </div>
       </div>
     </header>
@@ -44,6 +48,27 @@
             Chicago's <span>Free</span> Medical Check-Up and Weight Loss
             Consultation
           </h1>
+          <div class="inter-section-left">
+            <div class="offer">Your offer ends in:</div>
+            <div class="times">
+              <div class="counting">
+                <div class="counting-text">DAYS</div>
+                <div class="numbers">00</div>
+              </div>
+              <div class="counting">
+                <div class="counting-text">HOURS</div>
+                <div class="numbers">00</div>
+              </div>
+              <div class="counting">
+                <div class="counting-text">MINUTES</div>
+                <div class="numbers">00</div>
+              </div>
+              <div class="counting">
+                <div class="counting-text">SECONDS</div>
+                <div class="numbers">00</div>
+              </div>
+            </div>
+          </div>
           <p>
             Limited spots available due to the Physicians schedule and the high
             demand for service. No credit card or insurance required
@@ -106,7 +131,7 @@
       <div class="circle-2"></div>
     </section>
 
-    <section class="information-section">
+    <section id="information-section" class="information-section">
       <div class="information-container">
         <div class="information-left">
           <div class="information-text">
@@ -289,6 +314,72 @@
       <div class="circle-2"></div>
       <div class="circle-3"></div>
     </section>
+
+    <footer id="footer">
+      <div class="footer-content">
+        <div class="footer-container">
+          <div class="footer-left">
+            <img class="footer-image" src="./imgs/logo.png" alt="" />
+            <p class="footer-text">
+              A Better Weigh Medical Weight Loss Center offers a weight loss
+              program dedicated to helping you achieve long term weight loss
+              success with the use of FDA approved medication.
+            </p>
+            <div class="footer-contact">
+              <div class="contact-icons">
+                <div class="purple-icons">
+                  <i class="fa-solid fa-location-dot"></i>
+                </div>
+                <div>
+                  <span class="footer-bold">Head Office:</span> 1931 W 95th
+                  Street Chicago IL, 60643
+                </div>
+              </div>
+              <div class="contact-icons">
+                <div class="purple-icons">
+                  <i class="fa-solid fa-phone"></i>
+                </div>
+                <div><span class="footer-bold">Phone:</span> 773-496-4222</div>
+              </div>
+            </div>
+          </div>
+          <div class="footer-right">
+            <div>
+              <div class="footer-titles">About</div>
+              <ul class="footer-list">
+                <li class="footer-li"><a href="">About Us</a></li>
+                <li class="footer-li"><a href="">Book Online</a></li>
+                <li class="footer-li"><a href="">Locations</a></li>
+                <li class="footer-li"><a href="">Real Patient Stories</a></li>
+                <li class="footer-li"><a href="">Weight Loss Programs</a></li>
+              </ul>
+            </div>
+            <div>
+              <div class="footer-titles">More Links</div>
+              <ul class="footer-list">
+                <li class="footer-li"><a href="">Franchise Opporunities</a></li>
+                <li class="footer-li"><a href="">Career Opporunities</a></li>
+                <li class="footer-li"><a href="">Privacy Policy</a></li>
+                <li class="footer-li"><a href="">Terms & Condictions</a></li>
+                <li class="footer-li"><a href="">Return Policy</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="footer-end">
+          <div class="footer-socials">
+            <div class="footer-icons">
+              <i class="fa-brands fa-instagram"></i>
+            </div>
+            <div class="footer-icons"><i class="fa-brands fa-twitter"></i></div>
+            <div class="footer-icons">
+              <i class="fa-brands fa-facebook-f"></i>
+            </div>
+          </div>
+          <div>Copyright by A Better Weight Inc</div>
+        </div>
+      </div>
+    </footer>
   </body>
   <script src="script.js" defer></script>
 </html>
